[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/gui/1876.jpg" type="Texture" id=1]
[ext_resource path="res://assets/gui/button (1).png" type="Texture" id=2]
[ext_resource path="res://assets/gui/logo (1).png" type="Texture" id=3]
[ext_resource path="res://assets/gui/button (2).png" type="Texture" id=4]
[ext_resource path="res://scripts/menu.gd" type="Script" id=5]
[ext_resource path="res://assets/gui/button (5).png" type="Texture" id=6]
[ext_resource path="res://assets/gui/button (4).png" type="Texture" id=7]

[node name="menu" type="Node"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 0
custom_constants/margin_top = 200
custom_constants/margin_left = 0
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 380.0
margin_top = 200.0
margin_right = 643.0
margin_bottom = 550.0
size_flags_horizontal = 4
custom_constants/separation = 16

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 263.0
margin_bottom = 51.0
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 63.0
margin_top = 67.0
margin_right = 199.0
margin_bottom = 177.0
size_flags_horizontal = 4

[node name="StartButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 136.0
margin_bottom = 53.0
texture_normal = ExtResource( 7 )
texture_focused = ExtResource( 2 )

[node name="ExitButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 136.0
margin_bottom = 110.0
texture_normal = ExtResource( 6 )
texture_focused = ExtResource( 4 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
